@@ -98,6 +98,25 @@ Applications</a></b></font></td></tr></table></center>
 <td><font face="Arial,helvetica,geneva,sans-serif,lucida">
 <ul type="square">
 
+
+<li><b>Version 0.6.2 (Mar 28 2001)</b>
+<ul>
+<li>Updated documentation build stuff (for GNOME 1.4).
+</ul></li><Br>
+
+
+<li><b>Version 0.6.1 (Mar 12 2001)</b>
+<ul>
+<li>Updated translations (for GNOME 1.4 RC1).
+</ul></li><Br>
+
+
+<li><b>Version 0.6.0 (Feb 15 2001)</b>
+<ul>
+<li>A number of fairly minor bug fixes (for GNOME 1.4 beta 1).
+</ul></li><Br>
+
+
 <li><b>Version 0.5.11 (Oct 1 2000)</b>
 <ul>
 <li>Added workaround for SEGV bug in GnomeMessageBox in gnome-libs 1.2.3.
