@@ -165,6 +165,45 @@ Oct&nbsp;1&nbsp;2000
 -->
 
 
+
+<tr valign="top"><td>&nbsp;&nbsp;&nbsp;</td>
+<td><b><font face="Arial,helvetica,geneva,sans-serif,lucida">
+
+Apr&nbsp;19&nbsp;2001
+
+</b></font></td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td>
+<td><font face="Arial,helvetica,geneva,sans-serif,lucida">
+
+<B>Glade Website Moved</B>
+<P>
+Glade now has a new home -
+<a href="http://glade.gnome.org">http://glade.gnome.org</a>. Update your links
+now!
+</P>
+<P>
+The move was precipitated by the strange and sudden disappearance of the old
+website a few weeks ago. My apologies to those of you who tried and failed to
+access the old site recently.
+</font></td></tr>
+
+
+
+<tr valign="top"><td>&nbsp;&nbsp;&nbsp;</td>
+<td><b><font face="Arial,helvetica,geneva,sans-serif,lucida">
+
+Mar&nbsp;28&nbsp;2001
+
+</b></font></td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td>
+<td><font face="Arial,helvetica,geneva,sans-serif,lucida">
+
+<B>Glade 0.6.2 released !</B>
+<P>
+This release is mostly minor bug fixes and translation updates, to go out with
+GNOME 1.4.
+</font></td></tr>
+
+
+
 <tr valign="top"><td>&nbsp;&nbsp;&nbsp;</td>
 <td><b><font face="Arial,helvetica,geneva,sans-serif,lucida">
 
